# LedTable_emulator

./: .gitignore  CMakeLists.txt  animation00.h  animation01.h  animation02.h  debug.h  led_lib.cpp  led_lib.h  led_tabel.pro  led_tabel.pro.user.4.8-pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixlib.cpp  matrixlib.h  mode.h  showmatrix.cpp  showmatrix.h  tablemodes.cpp  tablemodes.h  timer.cpp  timer.h
Effects/: 00_slow_random.h  01_simple_rainbow.h  02_dribs.h  03_rain.h  04_all_random.h  05_show.h  06_fire.h  07_the_matrix.h  08_simple_balls.h  09_confetti.h  10_starfall.h  11_dynamic_square.h  12_random_rain.h  13_rainbow_rain.h  14_points.h  15_rainbow_point.h  16_rainbow_static_point.h  _sphere.h  _zig_zag.h  effect.h  effectslist.cpp  effectslist.h  erroreffect.h  lamp_din_point.h  template_effect.h  testmode.h
FastLED/: color.h  controller.h  fastled.cpp  fastled.h  fastled_config.h  hsv2rgb.cpp  hsv2rgb.h  lib8tion.h  noise.c  noise.cpp  noise.h  pixeltypes.h  power_mgt.cpp  power_mgt.h
FastLED/lib8tion/: math8.h  random8.h  scale8.h  trig8.h
